--- a/Sqrland_Calcul/packages.config
+++ b/Sqrland_Calcul/packages.config
@@ -1,5 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Athena" version="3.7.0.43" targetFramework="net472" />
+  <package id="AWSSDK.Core" version="3.7.0.45" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.TeamFoundation.DistributedTask.Common.Contracts" version="16.170.0" targetFramework="net472" />
+  <package id="Microsoft.TeamFoundationServer.Client" version="16.170.0" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Services.Client" version="16.170.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
 </packages>
