--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calcul_Ah2.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
