--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -62,9 +62,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calc_Angle.cs" />
+    <Compile Include="cheminement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cheminement.Designer.cs">
+      <DependentUpon>cheminement.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +93,9 @@
     <Compile Include="supp.Designer.cs">
       <DependentUpon>supp.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="cheminement.resx">
+      <DependentUpon>cheminement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
