--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.6.1\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -47,6 +50,9 @@
     </Reference>
     <Reference Include="ExcelDataReader.DataSet, Version=3.6.0.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDataReader.DataSet.3.6.0\lib\net35\ExcelDataReader.DataSet.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.2, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.2\lib\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data.SQLite, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
@@ -66,11 +72,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calc_Angle.cs" />
-    <Compile Include="cheminement.cs">
+    <Compile Include="Calc_Cheminement.cs" />
+    <Compile Include="Cheminement.cs" />
+    <Compile Include="FrmCheminement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="cheminement.Designer.cs">
-      <DependentUpon>cheminement.cs</DependentUpon>
+    <Compile Include="FrmCheminement.Designer.cs">
+      <DependentUpon>FrmCheminement.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -84,23 +92,26 @@
     <Compile Include="FrmLoad.Designer.cs">
       <DependentUpon>FrmLoad.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmResultatChemeniment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmResultatChemeniment.Designer.cs">
+      <DependentUpon>FrmResultatChemeniment.cs</DependentUpon>
+    </Compile>
     <Compile Include="mydb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="supp.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="supp.Designer.cs">
-      <DependentUpon>supp.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="cheminement.resx">
-      <DependentUpon>cheminement.cs</DependentUpon>
+    <EmbeddedResource Include="FrmCheminement.resx">
+      <DependentUpon>FrmCheminement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoad.resx">
       <DependentUpon>FrmLoad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmResultatChemeniment.resx">
+      <DependentUpon>FrmResultatChemeniment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -111,9 +122,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="supp.resx">
-      <DependentUpon>supp.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
