--- a/Sqrland_Calcul/packages.config
+++ b/Sqrland_Calcul/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="AWSSDK.Athena" version="3.7.0.43" targetFramework="net472" />
   <package id="AWSSDK.Core" version="3.7.0.45" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
