--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -54,6 +54,9 @@
     <Reference Include="itextsharp, Version=5.5.13.2, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\iTextSharp.5.5.13.2\lib\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="PrinterUtility, Version=1.0.2.0, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\PrinterUtility.1.2.0\lib\PrinterUtility.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data.SQLite, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\lib\net46\System.Data.SQLite.dll</HintPath>
@@ -67,6 +70,16 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Geometry, Version=0.9.3.5, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bezier.0.9.3.5\lib\netstandard2.0\System.Geometry.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Geometry.Text, Version=0.3.0.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Font.0.3.0.3\lib\netstandard2.0\System.Geometry.Text.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.1.1\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -74,6 +87,7 @@
     <Compile Include="Calc_Angle.cs" />
     <Compile Include="Calc_Cheminement.cs" />
     <Compile Include="Cheminement.cs" />
+    <Compile Include="DGVPrinter.cs" />
     <Compile Include="FrmCheminement.cs">
       <SubType>Form</SubType>
     </Compile>
