--- a/Sqrland_Calcul/packages.config
+++ b/Sqrland_Calcul/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="AWSSDK.Athena" version="3.7.0.43" targetFramework="net472" />
   <package id="AWSSDK.Core" version="3.7.0.45" targetFramework="net472" />
+  <package id="Bezier" version="0.9.3.5" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
+  <package id="Font" version="0.3.0.3" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
@@ -17,10 +19,12 @@
   <package id="Microsoft.TeamFoundationServer.Client" version="16.170.0" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Services.Client" version="16.170.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="PrinterUtility" version="1.2.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.1.1" targetFramework="net472" />
 </packages>
