--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -106,6 +106,12 @@
     <Compile Include="FrmLoad.Designer.cs">
       <DependentUpon>FrmLoad.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRayonmt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRayonmt.Designer.cs">
+      <DependentUpon>FrmRayonmt.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmResultatChemeniment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,7 @@
     <Compile Include="mydb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rayonnement.cs" />
     <EmbeddedResource Include="FrmCheminement.resx">
       <DependentUpon>FrmCheminement.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoad.resx">
       <DependentUpon>FrmLoad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRayonmt.resx">
+      <DependentUpon>FrmRayonmt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmResultatChemeniment.resx">
       <DependentUpon>FrmResultatChemeniment.cs</DependentUpon>
