--- a/Sqrland_Calcul/Sqrland_Calcul.csproj
+++ b/Sqrland_Calcul/Sqrland_Calcul.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="Calc_Angle.cs" />
     <Compile Include="Calc_Cheminement.cs" />
+    <Compile Include="Calc_Rayonmt.cs" />
     <Compile Include="Cheminement.cs" />
     <Compile Include="DGVPrinter.cs" />
     <Compile Include="FrmCheminement.cs">
@@ -117,6 +118,12 @@
     </Compile>
     <Compile Include="FrmResultatChemeniment.Designer.cs">
       <DependentUpon>FrmResultatChemeniment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmResultatRayonmt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmResultatRayonmt.Designer.cs">
+      <DependentUpon>FrmResultatRayonmt.cs</DependentUpon>
     </Compile>
     <Compile Include="mydb.cs" />
     <Compile Include="Program.cs" />
